[package]
name = "proc-easy"
version = "0.3.0"
edition = "2021"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/proc-easy"
homepage = "https://github.com/zakarumych/proc-easy"
repository = "https://github.com/zakarumych/proc-easy"
readme = "README.md"
description = "Macros to make writing proc-macro crates easy"
keywords = ["proc-macro", "macro", "derive"]
categories = ["rust-patterns"]

[dependencies]
proc-macro2 = { version = "1" }
syn = { version = "2", features = ["extra-traits"] }
quote = "1"
